atv 4 dança finalizada

--- a/4-AtividadeMusic/index.html
+++ b/4-AtividadeMusic/index.html
@@ -214,8 +214,52 @@
         </div>
       </div>
     </section>
-    <section></section>
-    <section></section>
+    <section class="secao-statistics">
+      <div class="cabecalho-statistics">
+        <h2 class="titulo-statistics">OUR STATISTICS</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, officia ipsam iusto distinctio provident rem labore eum iste quaerat earum quibusdam itaque magnam.
+        </p>
+      </div>
+      <div class="container-cards-statistics">
+        <div class="card-statistics">
+          <div class="card-statistics-conteudo">
+            <h3>1240+</h3>
+            <p>
+              Club
+            </p>
+          </div>
+        </div>
+
+        <div class="card-statistics">
+          <div class="card-statistics-conteudo">
+            <h3>2000+</h3>
+            <p>
+              Active member
+            </p>
+          </div>
+        </div>
+
+        <div class="card-statistics">
+          <div class="card-statistics-conteudo">
+            <h3>1.000+</h3>
+            <p>
+              Community
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="simon">
+      <div class="simon-container">
+      <div class="simon-content">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, officia ipsam iusto distinctio provident rem labore eum iste quaerat earum quibusdam itaque magnam.</p>
+        <h2>HERBERT SIMON</h2>
+      </div>
+    </div>
+
+
+    </section>
     <section></section>
     <footer></footer>
   </body>
